--- a/Telphony/Telphony/Info.plist
+++ b/Telphony/Telphony/Info.plist
@@ -10,5 +10,19 @@
 	<array>
 		<string>INStartAudioCallIntent</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>voip</string>
+		<string>bluetooth-peripheral</string>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>external-accessory</string>
+		<string>location</string>
+		<string>push-to-talk</string>
+		<string>bluetooth-central</string>
+		<string>nearby-interaction</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
